# duckling

./: .dockerignore  .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dance  Dockerfile  Dockerfile_amd64  Dockerfile_arm64  ExampleMain.hs  LICENSE  Makefile  PATENTS  README.md  changelog.md  default.nix  docker-compose.yml  duckling.cabal  release.nix  shell.nix  stack.yaml
.circleci/: config.yml  version
.github/workflows/: ci.yml
.nix/: compiler.nix  nixpkgs.nix
Duckling/: Api.hs  Compat.hs  Core.hs  Debug.hs  Dimensions.hs  Engine.hs  Lang.hs  Locale.hs  Region.hs  Resolve.hs  Rules.hs  Stash.hs  Tests.hs  Types.hs
Duckling/AmountOfMoney/: Helpers.hs  Rules.hs  Tests.hs  Types.hs
Duckling/AmountOfMoney/AR/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/BG/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/CA/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/EN/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/ES/: Corpus.hs  Rules.hs  Tests.hs
Duckling/AmountOfMoney/FR/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/GA/: Corpus.hs  Rules.hs  Tests.hs
Duckling/AmountOfMoney/HE/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/HR/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/ID/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/IT/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/KA/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/KO/: Corpus.hs  Rules.hs  Tests.hs
Duckling/AmountOfMoney/MN/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/NB/: Corpus.hs  Rules.hs  Tests.hs
Duckling/AmountOfMoney/NL/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/PT/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/RO/: Corpus.hs  Rules.hs  Tests.hs
Duckling/AmountOfMoney/RU/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/SV/: Corpus.hs  Rules.hs  Tests.hs
Duckling/AmountOfMoney/TH/: Corpus.hs
Duckling/AmountOfMoney/TR/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/VI/: Corpus.hs  Rules.hs
Duckling/AmountOfMoney/ZH/: Corpus.hs  Rules.hs
Duckling/Api/: Tests.hs
Duckling/CreditCardNumber/: Corpus.hs  Helpers.hs  Rules.hs  Types.hs
Duckling/Dimensions/: AF.hs  AR.hs  BG.hs  BN.hs  CA.hs  CS.hs  CZ.hs  Common.hs  DA.hs  DE.hs  EL.hs  EN.hs  ES.hs  ET.hs  FA.hs  FI.hs  FR.hs  GA.hs  HE.hs  HI.hs  HR.hs  HU.hs  ID.hs  IS.hs  IT.hs  JA.hs  KA.hs  KM.hs  KN.hs  KO.hs  LO.hs  ML.hs  MN.hs  MY.hs  NB.hs  NE.hs  NL.hs  PL.hs  PT.hs  RO.hs  (+13 more)
Duckling/Distance/: Helpers.hs  Rules.hs  Types.hs
Duckling/Distance/AR/: Corpus.hs  Rules.hs
Duckling/Distance/BG/: Corpus.hs  Rules.hs
Duckling/Distance/CA/: Corpus.hs  Rules.hs
Duckling/Distance/CS/: Corpus.hs  Rules.hs
Duckling/Distance/CZ/: Corpus.hs  Rules.hs
Duckling/Distance/DE/: Corpus.hs  Rules.hs
Duckling/Distance/EN/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Distance/ES/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Distance/FR/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Distance/GA/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Distance/HR/: Corpus.hs  Rules.hs
Duckling/Distance/IT/: Corpus.hs  Rules.hs
Duckling/Distance/KM/: Corpus.hs  Rules.hs
Duckling/Distance/KO/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Distance/MN/: Corpus.hs  Rules.hs
Duckling/Distance/NL/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Distance/PT/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Distance/RO/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Distance/RU/: Corpus.hs  Rules.hs
Duckling/Distance/SV/: Corpus.hs  Rules.hs
Duckling/Distance/TR/: Corpus.hs  Rules.hs
Duckling/Distance/ZH/: Corpus.hs  Rules.hs
Duckling/DistanceUnits/: Types.hs
Duckling/Duration/: Helpers.hs  Rules.hs  Types.hs
Duckling/Duration/AR/: Corpus.hs  Rules.hs
Duckling/Duration/BG/: Corpus.hs  Rules.hs
Duckling/Duration/CA/: Corpus.hs  Rules.hs
Duckling/Duration/DA/: Rules.hs
Duckling/Duration/DE/: Corpus.hs  Rules.hs
Duckling/Duration/EL/: Corpus.hs  Rules.hs
Duckling/Duration/EN/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Duration/ES/: Corpus.hs  Rules.hs
Duckling/Duration/FR/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Duration/GA/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Duration/HE/: Rules.hs
Duckling/Duration/HI/: Corpus.hs  Rules.hs
Duckling/Duration/HR/: Rules.hs
Duckling/Duration/HU/: Corpus.hs  Rules.hs
Duckling/Duration/IT/: Rules.hs
Duckling/Duration/JA/: Corpus.hs  Rules.hs  Tests.hs
Duckling/Duration/KA/: Corpus.hs  Rules.hs
Duckling/Duration/KO/: Corpus.hs  Rules.hs  (+1 more)
Duckling/Email/: Corpus.hs  Rules.hs  Tests.hs  Types.hs
Duckling/Engine/: Regex.hs
Duckling/Finance/: Helpers.hs  Rules.hs  Tests.hs  Types.hs
Duckling/Number/: Helpers.hs  Tests.hs  Types.hs
Duckling/Numeral/: Helpers.hs  Rules.hs  Tests.hs  Types.hs
Duckling/Ordinal/: Helpers.hs  Tests.hs  Types.hs
Duckling/PhoneNumber/: Corpus.hs  Rules.hs  Tests.hs  Types.hs
Duckling/Quantity/: Helpers.hs  Tests.hs  Types.hs
Duckling/Ranking/: Classifiers.hs  Extraction.hs  Generate.hs  Rank.hs  Train.hs  Types.hs
Duckling/Regex/: Types.hs
Duckling/Rules/: AF.hs  AR.hs  BG.hs  BN.hs  CA.hs  CS.hs  Common.hs  DA.hs  DE.hs  EL.hs  EN.hs  ES.hs  ET.hs  FA.hs  FI.hs  FR.hs  GA.hs  HE.hs  HI.hs  HR.hs  HU.hs  ID.hs  IS.hs  IT.hs  JA.hs  KA.hs  KM.hs  KN.hs  KO.hs  LO.hs  ML.hs  MN.hs  MY.hs  NB.hs  NE.hs  NL.hs  PL.hs  PT.hs  RO.hs  RU.hs  (+10 more)
Duckling/Temperature/: Helpers.hs  Rules.hs  Tests.hs  Types.hs
Duckling/Testing/: Asserts.hs  Types.hs
Duckling/Time/: Computed.hs  Corpus.hs  Helpers.hs  HolidayHelpers.hs  Tests.hs  Types.hs
Duckling/TimeGrain/: Types.hs
Duckling/Types/: Document.hs  Stash.hs
Duckling/Url/: Corpus.hs  Helpers.hs  Rules.hs  Tests.hs  Types.hs
Duckling/Volume/: Helpers.hs  Rules.hs  Types.hs
Wita-ai/helena01/: app.json
app/: app.js  package-lock.json  package.json  wit_handler.js
dist-newstyle/cache/: config
exe/: CustomDimensionExample.hs  DucklingExpensive.hs  DucklingRequestSample.hs  ExampleMain.hs  RegenMain.hs
github/tests/: TestMain.hs
tests/: TestMain.hs
tests/Duckling/: Tests.hs
windows/: run-duckling.bat
zoneinfo/: tzdata.zi
zoneinfo/right/: Factory  Hongkong  Israel  Japan  Kwajalein  Portugal  ROK  Turkey
(+1125 files in other folders)
